@@ -1,3 +1,7 @@
+2006-01-12  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/libcommon/log.c: Added void cast to ignore return code on error.
+
 2006-01-11  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/libmunge/decode.c(_decode_req):
